style.css
 /* stylesheet */

html::-webkit-scrollbar {
    width: 0 !important
}

html, body {
    overflow-x: hidden;
    max-width: 100%;
}

body {
    font-family: 'Montserrat', sans-serif !important;
    /* padding: 2% 0;
    margin-left: 3% !important;
    margin-right: 3% !important; */
    margin-bottom: 6%;
    height: 100vh;
    color: black !important;
}

#header-title {
    text-align: center;
    padding-bottom: 5px;
    margin: 0;
}

#content-about {
    background-color: red;
}

.a-link, .nav-link {
    padding-top: 5px;
    padding-left: 0;
    padding-right: 0;
    text-align: center;
    text-decoration: underline;
}

#header {
    padding: 4% 1%;
    margin-top: 2px;
}

.footer-content {
    padding: 5px 0;
}

#footer-home {
    width: 100%;
    position: relative;
    bottom: 0;
    text-align: center;
    padding: 70px auto;
    margin: 30px 0;
}

#footer-about {
    width: 100%;
    position: absolute;
    bottom: 0;
    text-align: center;
    padding: 70px auto;
    margin: 30px 0;
}

.row {
    display: flex;
    flex-wrap: wrap;
    flex: 100%;
    padding: 0 2%;
    margin: 0 0;
    justify-content: center;
}

.column {
    flex: 25%;
    max-width: 23%;
    padding: 0px 5px;
    margin: 0;
}

.column img {
    margin-top: 8px;
    padding: 0.5% auto;
    vertical-align: middle;
    width: 100%;
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */

@media screen and (max-width: 1275px) {
    .column {
        flex: 50%;
        max-width: 46%;
        padding-left: auto;
        padding-right: auto;
    }
}

@media screen and (max-width: 675px) {
    .column {
        flex: 100%;
        max-width: 92%;
        padding-left: auto;
        padding-right: auto;
    }
}

